# WslCmd

./: Cargo.toml  LICENSE  README.md  wslbrdg.bat  wsllink.bat
.cargo/: config.toml
src/: color_print.rs  common.rs  dbg_print.rs  execute.rs  execution_mode.rs  main.rs  manage.rs  management_mode.rs
src/libwslcmd/: mod.rs  wslcmd.rs  wslcmd_list.rs
src/libwslcmd/wcstr/: mod.rs  wcpath.rs  wcstr.rs
src/libwslcmd/wcstr/wcpath/: mod.rs  wccmd.rs  wcpath.rs
src/libwslcmd/wslcmd_list/: mod.rs
src/libwslcmd/wslcmd_list/wslgui_list/: mod.rs  wslassoc_list.rs  wslshortcut_list.rs
src/libwsllink/: mod.rs  wslcmd.rs  wslcmd_list.rs
src/libwsllink/wlstr/: mod.rs  wlpath.rs
src/wsllink_core/: common.rs  mod.rs  wlpath.rs  wslcmd.rs
