[package]
name = "wsllink"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
winapi = {version = "0.3", features = ["wincon", "winuser"]}
regex = "1.5.4"
termcolor = "1.1.2"
#windows = "0.19.0"

[build-dependencies]
#windows = "0.19.0"